Fixed box overflowing
Placed the rule "box-sizing:border-box" on the RIGHT selector: universal one

--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
+*{
+    box-sizing: border-box;
+}
+
 body{
     font-family: Roboto, sans-serif;
     height: 100vh;
     margin: 0;
-    box-sizing: border-box;
 }
 
 .header-container{
@@ -98,7 +101,6 @@ button{
     aspect-ratio: 1;
     flex-grow: 1;
     flex-shrink: 0;
-    flex-basis: 50px;
     border: 3px solid #3882F6;
     border-radius: 10%;
 }
